// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Address Form should render 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="makeStyles-errorInputWrapper-72"
              >
                <div
                  class="MuiFormControl-root makeStyles-formControl-78 "
                >
                  <h1
                    class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                  >
                    Address Line 1
                     
                  </h1>
                  <div>
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      data-testid="addr-line1-wrapper"
                    >
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="off"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          data-testid="addr-line1"
                          name="name"
                          placeholder="Address"
                          type="text"
                          value="21 Street"
                        />
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-80 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-81"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="makeStyles-errorInputWrapper-10"
              >
                <div
                  class="MuiFormControl-root makeStyles-formControl-78 "
                >
                  <h1
                    class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                  >
                    Address Line 2 (Optional)
                     
                  </h1>
                  <div>
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="off"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          data-testid="addr-line2"
                          name="line2"
                          placeholder="Attention, Office, Building, etc"
                          type="text"
                          value="Apt 3"
                        />
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-80 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-81"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
                >
                  <div
                    class="makeStyles-errorInputWrapper-10"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-86 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        Country
                         
                      </h1>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root   makeStyles-selectElement-87  MuiInputBase-fullWidth MuiInputBase-formControl"
                        data-testid=""
                      >
                        <div
                          aria-haspopup="listbox"
                          aria-labelledby="demo-simple-select-outlined-label demo-simple-select-outlined"
                          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                          id="demo-simple-select-outlined"
                          role="button"
                          tabindex="0"
                        >
                          United States
                        </div>
                        <input
                          aria-hidden="true"
                          class="MuiSelect-nativeInput"
                          data-testid="addr-country"
                          name="countryId"
                          tabindex="-1"
                          value="uuid-1"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-80 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-81"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
                >
                  <div
                    class="makeStyles-errorInputWrapper-10"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-86 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        State
                         
                      </h1>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root   makeStyles-selectElement-87  MuiInputBase-fullWidth MuiInputBase-formControl"
                        data-testid=""
                      >
                        <div
                          aria-haspopup="listbox"
                          aria-labelledby="demo-simple-select-outlined-label demo-simple-select-outlined"
                          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                          id="demo-simple-select-outlined"
                          role="button"
                          tabindex="0"
                        >
                          Texas
                        </div>
                        <input
                          aria-hidden="true"
                          class="MuiSelect-nativeInput"
                          data-testid="addr-state"
                          name="stateCode"
                          tabindex="-1"
                          value="TX"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-80 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-81"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
                >
                  <div
                    class="makeStyles-errorInputWrapper-10"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-78 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        Zip Code
                         
                      </h1>
                      <div>
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              data-testid="zip-code"
                              maxlength="10"
                              name="zipCode"
                              placeholder="00000"
                              type="text"
                              value=""
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-80 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-81"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-9"
                >
                  <div
                    class="makeStyles-errorInputWrapper-10"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-78 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        City
                         
                      </h1>
                      <div>
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              data-testid="addr-city"
                              name="city"
                              placeholder="City"
                              type="text"
                              value="Dallas"
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-80 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-81"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-12"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="makeStyles-mapWrapper-37 makeStyles-mapWrapper-11"
          >
            <div
              class="makeStyles-mapWrapper-37  "
              id="addr-map"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Address Form should render NY resident 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="makeStyles-errorInputWrapper-342"
              >
                <div
                  class="MuiFormControl-root makeStyles-formControl-348 "
                >
                  <h1
                    class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                  >
                    Address Line 1
                     
                  </h1>
                  <div>
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      data-testid="addr-line1-wrapper"
                    >
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="off"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          data-testid="addr-line1"
                          name="name"
                          placeholder="Address"
                          type="text"
                          value="21 Street"
                        />
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-350 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-351"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="makeStyles-errorInputWrapper-280"
              >
                <div
                  class="MuiFormControl-root makeStyles-formControl-348 "
                >
                  <h1
                    class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                  >
                    Address Line 2 (Optional)
                     
                  </h1>
                  <div>
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="off"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          data-testid="addr-line2"
                          name="line2"
                          placeholder="Attention, Office, Building, etc"
                          type="text"
                          value="Apt 3"
                        />
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-350 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-351"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
                >
                  <div
                    class="makeStyles-errorInputWrapper-280"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-356 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        Country
                         
                      </h1>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root   makeStyles-selectElement-357  MuiInputBase-fullWidth MuiInputBase-formControl"
                        data-testid=""
                      >
                        <div
                          aria-haspopup="listbox"
                          aria-labelledby="demo-simple-select-outlined-label demo-simple-select-outlined"
                          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                          id="demo-simple-select-outlined"
                          role="button"
                          tabindex="0"
                        >
                          United States
                        </div>
                        <input
                          aria-hidden="true"
                          class="MuiSelect-nativeInput"
                          data-testid="addr-country"
                          name="countryId"
                          tabindex="-1"
                          value="uuid-1"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-350 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-351"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
                >
                  <div
                    class="makeStyles-errorInputWrapper-280"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-356 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        State
                         
                      </h1>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root   makeStyles-selectElement-357  MuiInputBase-fullWidth MuiInputBase-formControl"
                        data-testid=""
                      >
                        <div
                          aria-haspopup="listbox"
                          aria-labelledby="demo-simple-select-outlined-label demo-simple-select-outlined"
                          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                          id="demo-simple-select-outlined"
                          role="button"
                          tabindex="0"
                        >
                          New York
                        </div>
                        <input
                          aria-hidden="true"
                          class="MuiSelect-nativeInput"
                          data-testid="addr-state"
                          name="stateCode"
                          tabindex="-1"
                          value="NY"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-350 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-351"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
                >
                  <div
                    class="makeStyles-errorInputWrapper-280"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-348 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        Zip Code
                         
                      </h1>
                      <div>
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              data-testid="zip-code"
                              maxlength="10"
                              name="zipCode"
                              placeholder="00000"
                              type="text"
                              value=""
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-350 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-351"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-9"
                >
                  <div
                    class="makeStyles-errorInputWrapper-280"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-348 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        City
                         
                      </h1>
                      <div>
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              data-testid="addr-city"
                              name="city"
                              placeholder="City"
                              type="text"
                              value="New York"
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-350 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-351"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-12"
            >
              <div
                class="MuiGrid-root makeStyles-middleWrapper-275 MuiGrid-container"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-6 MuiGrid-grid-xl-6"
                >
                  <div
                    class="makeStyles-errorInputWrapper-280"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-348 makeStyles-county-274"
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        County
                         
                      </h1>
                      <div>
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              data-testid="addr-county"
                              name="county"
                              placeholder="County"
                              type="text"
                              value=""
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-350 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-351"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 MuiGrid-grid-lg-6 MuiGrid-grid-xl-6"
                >
                  <div
                    class="makeStyles-errorInputWrapper-280"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-356 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        NYC Borough
                         
                      </h1>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root   makeStyles-selectElement-357 makeStyles-inactiveOption-358 MuiInputBase-fullWidth MuiInputBase-formControl"
                        data-testid=""
                      >
                        <div
                          aria-haspopup="listbox"
                          aria-labelledby="demo-simple-select-outlined-label demo-simple-select-outlined"
                          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                          id="demo-simple-select-outlined"
                          role="button"
                          tabindex="0"
                        >
                          Select Option
                        </div>
                        <input
                          aria-hidden="true"
                          class="MuiSelect-nativeInput"
                          data-testid="addr-nyc-borough"
                          name="borough"
                          tabindex="-1"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-350 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-351"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="makeStyles-mapWrapper-307 makeStyles-mapWrapper-281"
          >
            <div
              class="makeStyles-mapWrapper-307 makeStyles-mapWithCounty-309 "
              id="addr-map"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Address Form should render NY resident optional 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="makeStyles-errorInputWrapper-432"
              >
                <div
                  class="MuiFormControl-root makeStyles-formControl-438 "
                >
                  <h1
                    class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                  >
                    Address Line 1 (Optional)
                     
                  </h1>
                  <div>
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      data-testid="addr-line1-wrapper"
                    >
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="off"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          data-testid="addr-line1"
                          name="name"
                          placeholder="Address"
                          type="text"
                          value="21 Street"
                        />
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-440 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-441"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="makeStyles-errorInputWrapper-370"
              >
                <div
                  class="MuiFormControl-root makeStyles-formControl-438 "
                >
                  <h1
                    class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                  >
                    Address Line 2 (Optional)
                     
                  </h1>
                  <div>
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="off"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          data-testid="addr-line2"
                          name="line2"
                          placeholder="Attention, Office, Building, etc"
                          type="text"
                          value="Apt 3"
                        />
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-440 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-441"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
                >
                  <div
                    class="makeStyles-errorInputWrapper-370"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-446 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        Country (Optional)
                         
                      </h1>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root   makeStyles-selectElement-447  MuiInputBase-fullWidth MuiInputBase-formControl"
                        data-testid=""
                      >
                        <div
                          aria-haspopup="listbox"
                          aria-labelledby="demo-simple-select-outlined-label demo-simple-select-outlined"
                          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                          id="demo-simple-select-outlined"
                          role="button"
                          tabindex="0"
                        >
                          United States
                        </div>
                        <input
                          aria-hidden="true"
                          class="MuiSelect-nativeInput"
                          data-testid="addr-country"
                          name="countryId"
                          tabindex="-1"
                          value="uuid-1"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-440 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-441"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
                >
                  <div
                    class="makeStyles-errorInputWrapper-370"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-446 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        State (Optional)
                         
                      </h1>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root   makeStyles-selectElement-447  MuiInputBase-fullWidth MuiInputBase-formControl"
                        data-testid=""
                      >
                        <div
                          aria-haspopup="listbox"
                          aria-labelledby="demo-simple-select-outlined-label demo-simple-select-outlined"
                          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                          id="demo-simple-select-outlined"
                          role="button"
                          tabindex="0"
                        >
                          New York
                        </div>
                        <input
                          aria-hidden="true"
                          class="MuiSelect-nativeInput"
                          data-testid="addr-state"
                          name="stateCode"
                          tabindex="-1"
                          value="NY"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-440 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-441"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
                >
                  <div
                    class="makeStyles-errorInputWrapper-370"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-438 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        Zip Code (Optional)
                         
                      </h1>
                      <div>
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              data-testid="zip-code"
                              maxlength="10"
                              name="zipCode"
                              placeholder="00000"
                              type="text"
                              value=""
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-440 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-441"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-9"
                >
                  <div
                    class="makeStyles-errorInputWrapper-370"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-438 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        City (Optional)
                         
                      </h1>
                      <div>
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              data-testid="addr-city"
                              name="city"
                              placeholder="City"
                              type="text"
                              value="New York"
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-440 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-441"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-12"
            >
              <div
                class="MuiGrid-root makeStyles-middleWrapper-365 MuiGrid-container"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-6 MuiGrid-grid-xl-6"
                >
                  <div
                    class="makeStyles-errorInputWrapper-370"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-438 makeStyles-county-364"
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        County (Optional)
                         
                      </h1>
                      <div>
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              data-testid="addr-county"
                              name="county"
                              placeholder="County"
                              type="text"
                              value=""
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-440 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-441"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 MuiGrid-grid-lg-6 MuiGrid-grid-xl-6"
                >
                  <div
                    class="makeStyles-errorInputWrapper-370"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-446 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        NYC Borough (Optional)
                         
                      </h1>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root   makeStyles-selectElement-447 makeStyles-inactiveOption-448 MuiInputBase-fullWidth MuiInputBase-formControl"
                        data-testid=""
                      >
                        <div
                          aria-haspopup="listbox"
                          aria-labelledby="demo-simple-select-outlined-label demo-simple-select-outlined"
                          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                          id="demo-simple-select-outlined"
                          role="button"
                          tabindex="0"
                        >
                          Select Option
                        </div>
                        <input
                          aria-hidden="true"
                          class="MuiSelect-nativeInput"
                          data-testid="addr-nyc-borough"
                          name="borough"
                          tabindex="-1"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-440 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-441"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="makeStyles-mapWrapper-397 makeStyles-mapWrapper-371"
          >
            <div
              class="makeStyles-mapWrapper-397 makeStyles-mapWithCounty-399 "
              id="addr-map"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Address Form should render attention field 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="makeStyles-errorInputWrapper-522"
              >
                <div
                  class="MuiFormControl-root makeStyles-formControl-528 "
                >
                  <h1
                    class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                  >
                    Address Line 1
                     
                  </h1>
                  <div>
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      data-testid="addr-line1-wrapper"
                    >
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="off"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          data-testid="addr-line1"
                          name="name"
                          placeholder="Address"
                          type="text"
                          value="21 Street"
                        />
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-530 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-531"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="makeStyles-errorInputWrapper-460"
              >
                <div
                  class="MuiFormControl-root makeStyles-formControl-528 "
                >
                  <h1
                    class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                  >
                    Address Line 2 (Optional)
                     
                  </h1>
                  <div>
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="off"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          data-testid="addr-line2"
                          name="line2"
                          placeholder="Attention, Office, Building, etc"
                          type="text"
                          value="Apt 3"
                        />
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-530 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-531"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
                >
                  <div
                    class="MuiFormControl-root makeStyles-formControl-528 "
                  >
                    <h1
                      class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                    >
                      Attention 1 (Optional)
                       
                    </h1>
                    <div>
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      >
                        <div
                          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="off"
                            class="MuiInputBase-input MuiOutlinedInput-input"
                            data-testid="addr-attention1"
                            name="attention1"
                            placeholder="Attention 1"
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="PrivateNotchedOutline-root-530 MuiOutlinedInput-notchedOutline"
                            style="padding-left: 8px;"
                          >
                            <legend
                              class="PrivateNotchedOutline-legend-531"
                              style="width: 0.01px;"
                            >
                              <span>
                                ​
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
                >
                  <div
                    class="MuiFormControl-root makeStyles-formControl-528 "
                  >
                    <h1
                      class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                    >
                      Attention 2 (Optional)
                       
                    </h1>
                    <div>
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      >
                        <div
                          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="off"
                            class="MuiInputBase-input MuiOutlinedInput-input"
                            data-testid="addr-attention2"
                            name="attention2"
                            placeholder="Attention 2"
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="PrivateNotchedOutline-root-530 MuiOutlinedInput-notchedOutline"
                            style="padding-left: 8px;"
                          >
                            <legend
                              class="PrivateNotchedOutline-legend-531"
                              style="width: 0.01px;"
                            >
                              <span>
                                ​
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
                >
                  <div
                    class="makeStyles-errorInputWrapper-460"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-536 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        Country
                         
                      </h1>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root   makeStyles-selectElement-537  MuiInputBase-fullWidth MuiInputBase-formControl"
                        data-testid=""
                      >
                        <div
                          aria-haspopup="listbox"
                          aria-labelledby="demo-simple-select-outlined-label demo-simple-select-outlined"
                          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                          id="demo-simple-select-outlined"
                          role="button"
                          tabindex="0"
                        >
                          United States
                        </div>
                        <input
                          aria-hidden="true"
                          class="MuiSelect-nativeInput"
                          data-testid="addr-country"
                          name="countryId"
                          tabindex="-1"
                          value="uuid-1"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-530 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-531"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
                >
                  <div
                    class="makeStyles-errorInputWrapper-460"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-536 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        State
                         
                      </h1>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root   makeStyles-selectElement-537  MuiInputBase-fullWidth MuiInputBase-formControl"
                        data-testid=""
                      >
                        <div
                          aria-haspopup="listbox"
                          aria-labelledby="demo-simple-select-outlined-label demo-simple-select-outlined"
                          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                          id="demo-simple-select-outlined"
                          role="button"
                          tabindex="0"
                        >
                          Texas
                        </div>
                        <input
                          aria-hidden="true"
                          class="MuiSelect-nativeInput"
                          data-testid="addr-state"
                          name="stateCode"
                          tabindex="-1"
                          value="TX"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-530 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-531"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
                >
                  <div
                    class="makeStyles-errorInputWrapper-460"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-528 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        Zip Code
                         
                      </h1>
                      <div>
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              data-testid="zip-code"
                              maxlength="10"
                              name="zipCode"
                              placeholder="00000"
                              type="text"
                              value=""
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-530 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-531"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-9"
                >
                  <div
                    class="makeStyles-errorInputWrapper-460"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-528 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        City
                         
                      </h1>
                      <div>
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              data-testid="addr-city"
                              name="city"
                              placeholder="City"
                              type="text"
                              value="Dallas"
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-530 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-531"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-12"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="makeStyles-mapWrapper-487 makeStyles-mapWrapper-461"
          >
            <div
              class="makeStyles-mapWrapper-487  makeStyles-mapWithAttentionField-488"
              id="addr-map"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Address Form should render server errors 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="makeStyles-errorInputWrapper-252"
              >
                <div
                  class="MuiFormControl-root makeStyles-formControl-258 "
                >
                  <h1
                    class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                  >
                    Address Line 1
                     
                  </h1>
                  <div>
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      data-testid="addr-line1-wrapper"
                    >
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="off"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          data-testid="addr-line1"
                          name="name"
                          placeholder="Address"
                          type="text"
                          value="21 Street"
                        />
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-260 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-261"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="makeStyles-errorInputWrapper-190"
              >
                <div
                  class="MuiFormControl-root makeStyles-formControl-258 "
                >
                  <h1
                    class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                  >
                    Address Line 2 (Optional)
                     
                  </h1>
                  <div>
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="off"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          data-testid="addr-line2"
                          name="line2"
                          placeholder="Attention, Office, Building, etc"
                          type="text"
                          value="Apt 3"
                        />
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-260 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-261"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
                <h1
                  class="MuiTypography-root  makeStyles-errorMessage-254 errorMessage MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                >
                  err
                </h1>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
                >
                  <div
                    class="makeStyles-errorInputWrapper-190"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-266 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        Country
                         
                      </h1>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root   makeStyles-selectElement-267  MuiInputBase-fullWidth MuiInputBase-formControl"
                        data-testid=""
                      >
                        <div
                          aria-haspopup="listbox"
                          aria-labelledby="demo-simple-select-outlined-label demo-simple-select-outlined"
                          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                          id="demo-simple-select-outlined"
                          role="button"
                          tabindex="0"
                        >
                          United States
                        </div>
                        <input
                          aria-hidden="true"
                          class="MuiSelect-nativeInput"
                          data-testid="addr-country"
                          name="countryId"
                          tabindex="-1"
                          value="uuid-1"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-260 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-261"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
                >
                  <div
                    class="makeStyles-errorInputWrapper-190"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-266 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        State
                         
                      </h1>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root   makeStyles-selectElement-267  MuiInputBase-fullWidth MuiInputBase-formControl"
                        data-testid=""
                      >
                        <div
                          aria-haspopup="listbox"
                          aria-labelledby="demo-simple-select-outlined-label demo-simple-select-outlined"
                          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                          id="demo-simple-select-outlined"
                          role="button"
                          tabindex="0"
                        >
                          Texas
                        </div>
                        <input
                          aria-hidden="true"
                          class="MuiSelect-nativeInput"
                          data-testid="addr-state"
                          name="stateCode"
                          tabindex="-1"
                          value="TX"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-260 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-261"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
                >
                  <div
                    class="makeStyles-errorInputWrapper-190"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-258 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        Zip Code
                         
                      </h1>
                      <div>
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              data-testid="zip-code"
                              maxlength="10"
                              name="zipCode"
                              placeholder="00000"
                              type="text"
                              value=""
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-260 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-261"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-9"
                >
                  <div
                    class="makeStyles-errorInputWrapper-190"
                  >
                    <div
                      class="MuiFormControl-root makeStyles-formControl-258 "
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                      >
                        City
                         
                      </h1>
                      <div>
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              data-testid="addr-city"
                              name="city"
                              placeholder="City"
                              type="text"
                              value="Dallas"
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-260 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-261"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-12"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="makeStyles-mapWrapper-217 makeStyles-mapWrapper-191"
          >
            <div
              class="makeStyles-mapWrapper-217  "
              id="addr-map"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
